Add /biome functionality to the API (#22)
* Add biome data files

* Add Biome functionality by name

* Add Biome functionality by ID
